--- a/Viginere/index.html
+++ b/Viginere/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
-    
+<body onload="loadCallback()">
+    <button>click here</button>
+    <div class="resultText"></div>
 </body>
 </html>
